--- a/prices.html
+++ b/prices.html
@@ -13,81 +13,81 @@
                цены на услуги 
             </p>
         </section>
-        <section>
-            <table>
-                <thead>
-                    <th>Ремонтные услуги</th>
-                    <th>Цена</th>
-                    <th>Срок</th>
-                    <th> </th>
+        <section class="prices-table">
+            <table class="table-content">
+                <thead class="table-head">
+                    <th class="table-head__row">Ремонтные услуги</th>
+                    <th class="table-head__row">Цена</th>
+                    <th class="table-head__row">Срок</th>
+                    <th class="table-head__row"> </th>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Диагностика</td>
-                        <td>Бесплатно</td>
-                        <td>30 мин</td>
-                        <td>
-                            <button>
-                                <span>заказать</span>
-                                <img src="/images/goside.png" alt="Go side">
+                <tbody class="table-body">
+                    <tr class="table-body__row--first">
+                        <td class="table-body__column">Диагностика</td>
+                        <td class="table-body__column">Бесплатно</td>
+                        <td class="table-body__column">30 мин</td>
+                        <td class="table-body__column">
+                            <button class="table-button">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Замена дисплея</td>
-                        <td>1000 &#8381;</td>
-                        <td>30 - 120 мин</td>
-                        <td>
-                            <button>
-                                <span>заказать</span>
-                                <img src="/images/goside.png" alt="Go side">
+                    <tr class="table-body__row--second">
+                        <td class="table-body__column">Замена дисплея</td>
+                        <td class="table-body__column">1000 &#8381;</td>
+                        <td class="table-body__column">30 - 120 мин</td>
+                        <td class="table-body__column">
+                            <button class="table-button">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Замена полифонического динамика</td>
-                        <td>1000 &#8381;</td>
-                        <td>30 - 120 мин</td>
-                        <td>
-                            <button>
-                                <span>заказать</span>
-                                <img src="/images/goside.png" alt="Go side">
+                    <tr class="table-body__row--third">
+                        <td class="table-body__column">Замена полифонического динамика</td>
+                        <td class="table-body__column">1000 &#8381;</td>
+                        <td class="table-body__column">30 - 120 мин</td>
+                        <td class="table-body__column">
+                            <button class="table-btn">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Тестирование с выдачей технического заключения</td>
-                        <td>1000 &#8381;</td>
-                        <td>30 - 120 мин</td>
-                        <td>
-                            <button>
-                                <span>заказать</span>
-                                <img src="/images/goside.png" alt="Go side">
+                    <tr class="table-body__row--fourth">
+                        <td class="table-body__column">Тестирование с выдачей технического заключения</td>
+                        <td class="table-body__column">1000 &#8381;</td>
+                        <td class="table-body__column">30 - 120 мин</td>
+                        <td class="table-body__column">
+                            <button class="table-btn"> 
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Замена программного обеспечения</td>
-                        <td>1000 &#8381;</td>
-                        <td>30 - 120 мин</td>
-                        <td>
-                            <button>
-                                <span>заказать</span>
-                                <img src="/images/goside.png" alt="Go side">
+                    <tr class="table-body__row--fifth">
+                        <td class="table-body__column">Замена программного обеспечения</td>
+                        <td class="table-body__column">1000 &#8381;</td>
+                        <td class="table-body__column">30 - 120 мин</td>
+                        <td class="table-body__column">
+                            <button class="table-btn">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </section>
-        <section>
-            <p>
+        <section class="extrainfo">
+            <p class="extrainfo-text">
                 Все цены указаны с учетом НДС. Стоимсоть ремонта указана на единичную услугу. Для получения коммерческого
                  предложения на постоянное обслуживание оставьте заявку.
             </p>
-            <button>
-                <span>Получить коммерчесское предложение</span>
-                <img src="/images/more.png" alt="Узнать больше">
+            <button class="extrainfo-btn">
+                <span class="extrainfo-btn__text">Получить коммерчесское предложение</span>
+                <img src="/images/more.png" alt="Узнать больше" class="extrainfo-btn__img">
             </button>
         </section>
     </main>
