--- a/prices.html
+++ b/prices.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="maket, figma, prices">
+    <link rel="stylesheet" href="prices.css">
     <title>prices</title>
 </head>
 <body>
@@ -13,7 +14,86 @@
                цены на услуги 
             </p>
         </section>
-        <section class="prices-table">
+        <section class="swiper screen--small">
+            <div class="swiper-wrapper">
+                <section class="price-section swiper-slide">
+                    <p class="price-section__header">Ремонтные услуги</p>
+                    <p class="price-section__content">Диагностика</p>
+                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__content">Бесплатно</p>
+                    <div class="flex-element">
+                        <div class="time">
+                            <p class="price-section__head">Срок</p>
+                            <p class="price-section__content">30 - 120 мин</p>
+                        </div>
+                        <button class="swiper-btn">
+                            <span class="swiper-btn__text">заказать</span>
+                            <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                        </button>
+                    </div>
+                </section>
+                <section class="price-section swiper-slide">
+                    <p class="price-section__header">Ремонтные услуги</p>
+                    <p class="price-section__content">Замена дисплея</p>
+                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__content">1000 &#8381;</p>
+                    <div class="flex-element">
+                        <div class="time">
+                            <p class="price-section__head">Срок</p>
+                            <p class="price-section__content">30 - 120 мин</p>
+                        </div>
+                        <button class="swiper-btn">
+                            <span class="swiper-btn__text">заказать</span>
+                            <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                        </button>
+                    </div>
+                    <!-- <p class="price-section__head">Срок</p>
+                    <p class="price-section__content">30 - 120 мин</p>
+                    <button class="swiper-btn">
+                        <span class="swiper-btn__text">заказать</span>
+                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                    </button> -->
+                </section>
+                <section class="price-section swiper-slide">
+                    <p class="price-section__header">Ремонтные услуги</p>
+                    <p class="price-section__content">Замена полифонического динамика</p>
+                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__content">1000 &#8381;</p>
+                    <p class="price-section__head">Срок</p>
+                    <p class="price-section__content">30 - 120 мин</p>
+                    <button class="swiper-btn">
+                        <span class="swiper-btn__text">заказать</span>
+                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                    </button>
+                </section>
+                <section class="price-section swiper-slide">
+                    <p class="price-section__header">Ремонтные услуги</p>
+                    <p class="price-section__content">Тестирование с выдачей технического заключения</p>
+                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__content">1000 &#8381;</p>
+                    <p class="price-section__head">Срок</p>
+                    <p class="price-section__content">30 - 120 мин</p>
+                    <button class="swiper-btn">
+                        <span class="swiper-btn__text">заказать</span>
+                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                    </button>
+                </section>
+                <section class="price-section swiper-slide">
+                    <p class="price-section__header">Ремонтные услуги</p>
+                    <p class="price-section__content">Замена программного обеспеченния</p>
+                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__content">1000 &#8381;</p>
+                    <p class="price-section__head">Срок</p>
+                    <p class="price-section__content">30 - 120 мин</p>
+                    <button class="swiper-btn">
+                        <span class="swiper-btn__text">заказать</span>
+                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                    </button>
+                </section>
+            </div>
+            <div class="swiper-pagination"></div>
+        </section>
+        <section class="prices-table screen--medium">
             <table class="table-content">
                 <thead class="table-head">
                     <th class="table-head__row">Ремонтные услуги</th>
@@ -86,7 +166,7 @@
                  предложения на постоянное обслуживание оставьте заявку.
             </p>
             <button class="extrainfo-btn">
-                <span class="extrainfo-btn__text">Получить коммерчесское предложение</span>
+                <span class="extrainfo-btn__text">Получить коммерческое предложение</span>
                 <img src="/images/more.png" alt="Узнать больше" class="extrainfo-btn__img">
             </button>
         </section>
