Сделала для 320 свайпер с огромным костылем

--- a/prices.html
+++ b/prices.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="maket, figma, prices">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="prices.css">
     <title>prices</title>
 </head>
@@ -15,15 +16,15 @@
             </p>
         </section>
         <section class="swiper screen--small">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper container">
                 <section class="price-section swiper-slide">
                     <p class="price-section__header">Ремонтные услуги</p>
                     <p class="price-section__content">Диагностика</p>
-                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__header">Цена</p>
                     <p class="price-section__content">Бесплатно</p>
                     <div class="flex-element">
                         <div class="time">
-                            <p class="price-section__head">Срок</p>
+                            <p class="price-section__header">Срок</p>
                             <p class="price-section__content">30 - 120 мин</p>
                         </div>
                         <button class="swiper-btn">
@@ -35,11 +36,11 @@
                 <section class="price-section swiper-slide">
                     <p class="price-section__header">Ремонтные услуги</p>
                     <p class="price-section__content">Замена дисплея</p>
-                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__header">Цена</p>
                     <p class="price-section__content">1000 &#8381;</p>
                     <div class="flex-element">
                         <div class="time">
-                            <p class="price-section__head">Срок</p>
+                            <p class="price-section__header">Срок</p>
                             <p class="price-section__content">30 - 120 мин</p>
                         </div>
                         <button class="swiper-btn">
@@ -47,52 +48,58 @@
                             <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
                         </button>
                     </div>
-                    <!-- <p class="price-section__head">Срок</p>
-                    <p class="price-section__content">30 - 120 мин</p>
-                    <button class="swiper-btn">
-                        <span class="swiper-btn__text">заказать</span>
-                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
-                    </button> -->
                 </section>
                 <section class="price-section swiper-slide">
                     <p class="price-section__header">Ремонтные услуги</p>
                     <p class="price-section__content">Замена полифонического динамика</p>
-                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__header">Цена</p>
                     <p class="price-section__content">1000 &#8381;</p>
-                    <p class="price-section__head">Срок</p>
-                    <p class="price-section__content">30 - 120 мин</p>
-                    <button class="swiper-btn">
-                        <span class="swiper-btn__text">заказать</span>
-                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
-                    </button>
+                    <div class="flex-element">
+                        <div class="time">
+                            <p class="price-section__header">Срок</p>
+                            <p class="price-section__content">30 - 120 мин</p>
+                        </div>
+                        <button class="swiper-btn">
+                            <span class="swiper-btn__text">заказать</span>
+                            <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                        </button>
+                    </div>
                 </section>
                 <section class="price-section swiper-slide">
                     <p class="price-section__header">Ремонтные услуги</p>
                     <p class="price-section__content">Тестирование с выдачей технического заключения</p>
-                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__header">Цена</p>
                     <p class="price-section__content">1000 &#8381;</p>
-                    <p class="price-section__head">Срок</p>
-                    <p class="price-section__content">30 - 120 мин</p>
-                    <button class="swiper-btn">
-                        <span class="swiper-btn__text">заказать</span>
-                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
-                    </button>
+                    <div class="flex-element">
+                        <div class="time">
+                            <p class="price-section__header">Срок</p>
+                            <p class="price-section__content">30 - 120 мин</p>
+                        </div>
+                        <button class="swiper-btn">
+                            <span class="swiper-btn__text">заказать</span>
+                            <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                        </button>
+                    </div>
                 </section>
                 <section class="price-section swiper-slide">
                     <p class="price-section__header">Ремонтные услуги</p>
                     <p class="price-section__content">Замена программного обеспеченния</p>
-                    <p class="price-section__head">Цена</p>
+                    <p class="price-section__header">Цена</p>
                     <p class="price-section__content">1000 &#8381;</p>
-                    <p class="price-section__head">Срок</p>
-                    <p class="price-section__content">30 - 120 мин</p>
-                    <button class="swiper-btn">
-                        <span class="swiper-btn__text">заказать</span>
-                        <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
-                    </button>
+                    <div class="flex-element">
+                        <div class="time">
+                            <p class="price-section__header">Срок</p>
+                            <p class="price-section__content">30 - 120 мин</p>
+                        </div>
+                        <button class="swiper-btn">
+                            <span class="swiper-btn__text">заказать</span>
+                            <img src="/images/goside.png" alt="Go side" class="swiper-btn__img">
+                        </button>
+                    </div>
                 </section>
             </div>
-            <div class="swiper-pagination"></div>
         </section>
+        <div class="swiper-pagination" id="pagination"></div>
         <section class="prices-table screen--medium">
             <table class="table-content">
                 <thead class="table-head">
@@ -171,5 +178,7 @@
             </button>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="prices.js"></script>
 </body>
 </html>
