--- a/prices.html
+++ b/prices.html
@@ -101,75 +101,75 @@
         </section>
         <div class="swiper-pagination" id="pagination"></div>
         <section class="prices-table screen--medium">
-            <table class="table-content">
-                <thead class="table-head">
-                    <th class="table-head__row">Ремонтные услуги</th>
-                    <th class="table-head__row">Цена</th>
-                    <th class="table-head__row">Срок</th>
-                    <th class="table-head__row"> </th>
-                </thead>
-                <tbody class="table-body">
-                    <tr class="table-body__row--first">
-                        <td class="table-body__column">Диагностика</td>
-                        <td class="table-body__column">Бесплатно</td>
-                        <td class="table-body__column">30 мин</td>
-                        <td class="table-body__column">
-                            <button class="table-button">
-                                <span class="table-btn__text">заказать</span>
-                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
-                            </button>
-                        </td>
-                    </tr>
-                    <tr class="table-body__row--second">
-                        <td class="table-body__column">Замена дисплея</td>
-                        <td class="table-body__column">1000 &#8381;</td>
-                        <td class="table-body__column">30 - 120 мин</td>
-                        <td class="table-body__column">
-                            <button class="table-button">
-                                <span class="table-btn__text">заказать</span>
-                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
-                            </button>
-                        </td>
-                    </tr>
-                    <tr class="table-body__row--third">
-                        <td class="table-body__column">Замена полифонического динамика</td>
-                        <td class="table-body__column">1000 &#8381;</td>
-                        <td class="table-body__column">30 - 120 мин</td>
-                        <td class="table-body__column">
+            <div class="table-content">
+                <div class="table-head">
+                    <span class="table-head__row">Ремонтные услуги</span>
+                    <span class="table-head__row">Цена</span>
+                    <span class="table-head__row">Срок</span>
+                    <span class="table-head__row"> </span>
+                </div>
+                <div class="table-body">
+                    <div class="table-body__row table-body__row--first">
+                        <span class="table-body__column">Диагностика</span>
+                        <span class="table-body__column">Бесплатно</span>
+                        <span class="table-body__column">30 мин</span>
+                        <span class="table-body__column">
                             <button class="table-btn">
                                 <span class="table-btn__text">заказать</span>
                                 <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
-                        </td>
-                    </tr>
-                    <tr class="table-body__row--fourth">
-                        <td class="table-body__column">Тестирование с выдачей технического заключения</td>
-                        <td class="table-body__column">1000 &#8381;</td>
-                        <td class="table-body__column">30 - 120 мин</td>
-                        <td class="table-body__column">
+                        </span>
+                    </div>
+                    <div class="table-body__row table-body__row--second">
+                        <span class="table-body__column">Замена дисплея</span>
+                        <span class="table-body__column">1000 &#8381;</span>
+                        <span class="table-body__column">30 - 120 мин</span>
+                        <span class="table-body__column">
+                            <button class="table-btn">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
+                            </button>
+                        </span>
+                    </div>
+                    <div class="table-body__row table-body__row--third">
+                        <span class="table-body__column">Замена полифонического динамика</span>
+                        <span class="table-body__column">1000 &#8381;</span>
+                        <span class="table-body__column">30 - 120 мин</span>
+                        <span class="table-body__column">
+                            <button class="table-btn">
+                                <span class="table-btn__text">заказать</span>
+                                <img src="/images/goside.png" alt="Go side" class="table-btn__img">
+                            </button>
+                        </span>
+                    </div>
+                    <div class="table-body__row table-body__row--fourth">
+                        <span class="table-body__column">Тестирование с выдачей технического заключения</span>
+                        <span class="table-body__column">1000 &#8381;</span>
+                        <span class="table-body__column">30 - 120 мин</span>
+                        <span class="table-body__column">
                             <button class="table-btn"> 
                                 <span class="table-btn__text">заказать</span>
                                 <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
-                        </td>
-                    </tr>
-                    <tr class="table-body__row--fifth">
-                        <td class="table-body__column">Замена программного обеспечения</td>
-                        <td class="table-body__column">1000 &#8381;</td>
-                        <td class="table-body__column">30 - 120 мин</td>
-                        <td class="table-body__column">
+                        </span>
+                    </div>
+                    <div class=" table-body__row table-body__row--fifth">
+                        <span class="table-body__column">Замена программного обеспечения</span>
+                        <span class="table-body__column">1000 &#8381;</span>
+                        <span class="table-body__column">30 - 120 мин</span>
+                        <span class="table-body__column">
                             <button class="table-btn">
                                 <span class="table-btn__text">заказать</span>
                                 <img src="/images/goside.png" alt="Go side" class="table-btn__img">
                             </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="extrainfo">
             <p class="extrainfo-text">
-                Все цены указаны с учетом НДС. Стоимсоть ремонта указана на единичную услугу. Для получения коммерческого
+                Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого
                  предложения на постоянное обслуживание оставьте заявку.
             </p>
             <button class="extrainfo-btn">
