Промежуточный результат, сделаны стили таблицы дл 768

--- a/prices.html
+++ b/prices.html
@@ -120,6 +120,7 @@
                             </button>
                         </span>
                     </div>
+                    <div class="divider"></div>
                     <div class="table-body__row table-body__row--second">
                         <span class="table-body__column">Замена дисплея</span>
                         <span class="table-body__column">1000 &#8381;</span>
@@ -131,6 +132,7 @@
                             </button>
                         </span>
                     </div>
+                    <div class="divider"></div>
                     <div class="table-body__row table-body__row--third">
                         <span class="table-body__column">Замена полифонического динамика</span>
                         <span class="table-body__column">1000 &#8381;</span>
@@ -142,6 +144,7 @@
                             </button>
                         </span>
                     </div>
+                    <div class="divider"></div>
                     <div class="table-body__row table-body__row--fourth">
                         <span class="table-body__column">Тестирование с выдачей технического заключения</span>
                         <span class="table-body__column">1000 &#8381;</span>
@@ -153,6 +156,7 @@
                             </button>
                         </span>
                     </div>
+                    <div class="divider"></div>
                     <div class=" table-body__row table-body__row--fifth">
                         <span class="table-body__column">Замена программного обеспечения</span>
                         <span class="table-body__column">1000 &#8381;</span>
@@ -164,6 +168,7 @@
                             </button>
                         </span>
                     </div>
+                    <div class="divider"></div>
                 </div>
             </div>
         </section>
