--- a/feedback.html
+++ b/feedback.html
@@ -8,35 +8,29 @@
     <title>Feedback window</title>
 </head>
 <body>
-    <main class="page-content">
-        <div>
-            <img src="/images/close.png" alt="Закрыть">
+    <main class="page-container">
+        <div class="feedback-close">
+            <img src="/images/close.png" alt="Закрыть" class="feedback-close__img">
         </div>
-        <h2>Обратная связь</h2>
-        <div>
-            <form action="#" method="post">
-                <input type="text" id="name" name="name" placeholder="Имя">
-                <br>
-                <input type="number" id="phone" name="phone" placeholder="Телефон">
-                <br>
-                <input type="email" id="email" name="email" placeholder="Электронная почта">
-                <br>
-                <textarea type="text" name="message" id="message" cols="30" rows="5" placeholder="Сообщение"></textarea>
-            </form>
-        </div>
-        <div>
-            <section>
-                Нажимая “отправить”, вы даете согласие на 
-                <span>обработку персональных данных</span> 
-                и соглашаетесь с нашей <span>политикой конфиденциальности</span>
-            </section>
-        </div>
-        <div>
-            <button>
-                <span>Отправить</span>
-                <img src="/images/goside.png" alt="Отправить форму">
-            </button>
-        </div>
+        <h2 class="feedback-headline">Обратная связь</h2>
+        <form action="#" method="post" class="feedback-form">
+            <input type="text" id="name" name="name" placeholder="Имя" class="feedback-form__name-input">
+            <br>
+            <input type="number" id="phone" name="phone" placeholder="Телефон" class="feedback-form__phone-input">
+            <br>
+            <input type="email" id="email" name="email" placeholder="Электронная почта" class="feedback-form__email-input">
+            <br>
+            <textarea type="text" name="message" id="message" cols="30" rows="5" placeholder="Сообщение" class="feedback-form__message-input"></textarea>
+        </form>
+        <section class="feedback-text">
+            Нажимая “отправить”, вы даете согласие на 
+            <span class="feedback-text--pink">обработку персональных данных</span> 
+            и соглашаетесь с нашей <span class="feedback-text--pink">политикой конфиденциальности</span>
+        </section>
+        <button class="feedback-button">
+            <span class="feedback-button__text">Отправить</span>
+            <img src="/images/goside.png" alt="Отправить форму" class="feedback-button__img">
+        </button>
     </main>
 </body>
 </html>
