--- a/feedback.html
+++ b/feedback.html
@@ -12,15 +12,19 @@
         <div class="feedback-close">
             <img src="/images/close.png" alt="Закрыть" class="feedback-close__img">
         </div>
-        <h2 class="feedback-headline">Обратная связь</h2>
+        <div class="feedback-headline">
+            <div class="feedback-headline__divider"></div>
+            <h2 class="feedback-headline__text">Обратная связь</h2>
+        </div>
+        
         <form action="#" method="post" class="feedback-form">
-            <input type="text" id="name" name="name" placeholder="Имя" class="feedback-form__name-input">
+            <input type="text" id="name" name="name" placeholder="  Имя" class="feedback-form__name-input">
             <br>
-            <input type="number" id="phone" name="phone" placeholder="Телефон" class="feedback-form__phone-input">
+            <input type="number" id="phone" name="phone" placeholder="  Телефон" class="feedback-form__phone-input">
             <br>
-            <input type="email" id="email" name="email" placeholder="Электронная почта" class="feedback-form__email-input">
+            <input type="email" id="email" name="email" placeholder="  Электронная почта" class="feedback-form__email-input">
             <br>
-            <textarea type="text" name="message" id="message" cols="30" rows="5" placeholder="Сообщение" class="feedback-form__message-input"></textarea>
+            <textarea type="text" name="message" id="message" cols="30" rows="8" placeholder="  Сообщение" class="feedback-form__message-input"></textarea>
         </form>
         <section class="feedback-text">
             Нажимая “отправить”, вы даете согласие на 
