исправила на кнопку

--- a/call.html
+++ b/call.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main class="page-container">
-        <div class="call-close">
+        <button class="call-close">
             <img src="/images/close.png" alt="Закрыть" class="call-close__img">
-        </div>
+        </button>
         <div class="call-headline">
             <div class="call-headline__divider"></div>
             <h2 class="call-headline__text">Заказать звонок</h2>
